# launcher-extensions

./: Cargo.toml
auth-blocker/: Cargo.toml
auth-blocker/src/: config.rs  lib.rs
authlib-patcher/: Cargo.toml
authlib-patcher/src/: lib.rs
profile-generator/: Cargo.toml
profile-generator/src/: command.rs  download.rs  generator.rs  lib.rs  util.rs
profile-generator/src/minecraft/: fabric.rs  forge.rs  version.rs
